maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while (getY() != 0) {
    while (estFaceMur()) {
      keepHandOnSideWall()
    }
    if (getDirection() == NORD) {
    avance()
    }
  }
  
  
  
  
  while (!estSurBiscuit()) {
    keepHandOnSideWall()
  }
  prendBiscuit()
  
  def keepHandOnSideWall() {
    gauche()
    while (estFaceMur()) {
      droite()
    }
    avance()
  }
}